<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/select_city"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spnrChangeCity"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:padding="15dp" />

    <Button
        android:id="@+id/btnAcceptChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/spnrChangeCity"
        android:layout_alignRight="@+id/spnrChangeCity"
        android:layout_below="@+id/spnrChangeCity"
        android:backgroundTint="@color/primary_dark"
        android:text="@string/accept_change"
        android:textColor="@color/icons" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnAcceptChange"
        android:layout_centerHorizontal="true"
        android:text="@string/cancel_change" />
</RelativeLayout>